[gd_scene load_steps=6 format=3 uid="uid://vnvvk2h417qr"]

[ext_resource type="Script" path="res://scripts/Menus/MainMenu/TitleLabel.gd" id="1_aynnw"]
[ext_resource type="Script" path="res://scripts/Menus/MainMenu/UniverseList.gd" id="2_ldagl"]
[ext_resource type="Script" path="res://scripts/Menus/MainMenu/DeleteUniverse.gd" id="3_xoxpg"]
[ext_resource type="Script" path="res://scripts/Menus/MainMenu/NewUniverse.gd" id="4_7keuo"]
[ext_resource type="Script" path="res://scripts/Menus/MainMenu/PlayUniverse.gd" id="5_ghgce"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
script = ExtResource("1_aynnw")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -571.0
offset_top = -260.0
offset_right = 569.0
offset_bottom = 322.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start Game" type="TabBar" parent="TabContainer"]
layout_mode = 2

[node name="Game Menu" type="GridContainer" parent="TabContainer/Start Game"]
layout_mode = 0
offset_right = 1140.0
offset_bottom = 552.0
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 2

[node name="Options" type="VBoxContainer" parent="TabContainer/Start Game/Game Menu"]
layout_mode = 2
size_flags_vertical = 3

[node name="Creative Mode" type="CheckButton" parent="TabContainer/Start Game/Game Menu/Options"]
layout_mode = 2
size_flags_horizontal = 0
button_pressed = true
text = "Creative Mode"

[node name="UniverseListAndOptions" type="GridContainer" parent="TabContainer/Start Game/Game Menu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UniverseMenu" type="VBoxContainer" parent="TabContainer/Start Game/Game Menu/UniverseListAndOptions"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Universe Select" type="Label" parent="TabContainer/Start Game/Game Menu/UniverseListAndOptions/UniverseMenu"]
layout_mode = 2
text = "Select Universe"

[node name="UniverseListContainer" type="PanelContainer" parent="TabContainer/Start Game/Game Menu/UniverseListAndOptions/UniverseMenu"]
layout_mode = 2
size_flags_vertical = 3

[node name="Background" type="ColorRect" parent="TabContainer/Start Game/Game Menu/UniverseListAndOptions/UniverseMenu/UniverseListContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="UniverseList" type="ItemList" parent="TabContainer/Start Game/Game Menu/UniverseListAndOptions/UniverseMenu/UniverseListContainer"]
unique_name_in_owner = true
layout_mode = 2
auto_height = true
script = ExtResource("2_ldagl")

[node name="UniverseOptions" type="GridContainer" parent="TabContainer/Start Game/Game Menu/UniverseListAndOptions"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 25

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Start Game/Game Menu/UniverseListAndOptions/UniverseOptions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 50

[node name="DeleteUniverseBtn" type="Button" parent="TabContainer/Start Game/Game Menu/UniverseListAndOptions/UniverseOptions/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Delete"
script = ExtResource("3_xoxpg")

[node name="NewUniverseBtn" type="Button" parent="TabContainer/Start Game/Game Menu/UniverseListAndOptions/UniverseOptions/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "New"
script = ExtResource("4_7keuo")

[node name="PlayUniverseBtn" type="Button" parent="TabContainer/Start Game/Game Menu/UniverseListAndOptions/UniverseOptions"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Play Game"
script = ExtResource("5_ghgce")

[node name="Settings" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="DeleteUniverseDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
size = Vector2i(351, 100)
dialog_text = "Are you sure you want to delete this universe?"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="empty_clicked" from="TabContainer/Start Game/Game Menu/UniverseListAndOptions/UniverseMenu/UniverseListContainer/UniverseList" to="TabContainer/Start Game/Game Menu/UniverseListAndOptions/UniverseMenu/UniverseListContainer/UniverseList" method="_on_empty_clicked"]
[connection signal="item_selected" from="TabContainer/Start Game/Game Menu/UniverseListAndOptions/UniverseMenu/UniverseListContainer/UniverseList" to="TabContainer/Start Game/Game Menu/UniverseListAndOptions/UniverseMenu/UniverseListContainer/UniverseList" method="_on_item_selected"]
[connection signal="pressed" from="TabContainer/Start Game/Game Menu/UniverseListAndOptions/UniverseOptions/HBoxContainer/DeleteUniverseBtn" to="TabContainer/Start Game/Game Menu/UniverseListAndOptions/UniverseOptions/HBoxContainer/DeleteUniverseBtn" method="_on_pressed"]
[connection signal="pressed" from="TabContainer/Start Game/Game Menu/UniverseListAndOptions/UniverseOptions/HBoxContainer/NewUniverseBtn" to="TabContainer/Start Game/Game Menu/UniverseListAndOptions/UniverseOptions/HBoxContainer/NewUniverseBtn" method="_on_pressed"]
[connection signal="pressed" from="TabContainer/Start Game/Game Menu/UniverseListAndOptions/UniverseOptions/PlayUniverseBtn" to="TabContainer/Start Game/Game Menu/UniverseListAndOptions/UniverseOptions/PlayUniverseBtn" method="_on_pressed"]
[connection signal="confirmed" from="DeleteUniverseDialog" to="TabContainer/Start Game/Game Menu/UniverseListAndOptions/UniverseOptions/HBoxContainer/DeleteUniverseBtn" method="_on_delete_world_dialog_confirmed"]
